Added leetcode Solution